<resources  xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">MemoryTravel</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startTravel">开启记忆之旅</string>
    <string name="MODEL_RANDOM">全部随机</string>
    <string name="MODEL_ALLANDDISORDER">唯一乱序</string>
    <string name="MODEL_ALLANDORDER">唯一顺序</string>
    <string name="MODEL_ALLANDREVERSE">唯一逆序</string>


    <string name="pref_fromNumber_key" translatable="false">pref_fromNumber_key</string>
    <string name="pref_fromNumber_label" >数组开始值</string>
    <string name="pref_fromNumber_default" >1</string>

    <string name="pref_toNumber_key" translatable="false">pref_toNumber_key</string>
    <string name="pref_toNumber_label" >数组结束值</string>
    <string name="pref_toNumber_default" >100</string>

    <string name="pref_arraySize_key" translatable="false">pref_arraySize_key</string>
    <string name="pref_arraySize_label" >数组大小</string>
    <string name="pref_arraySize_default" >100</string>

    <string name="pref_modeChoose_key" translatable="false">pref_modeChoose_key</string>
    <string name="pref_modeChoose_label" >默认模式</string>
    <string name="pref_modeChoose_default" >MODEL_ALLANDDISORDER</string>

    <string name="title_activity_process">ProcessActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="knowButton">通过</string>
    <string name="finishButton">结束</string>
    <string name="hintButton">提示</string>
    <string name="notAvailableButton">无法使用</string>
    <string name="overButton">结束</string>

    <string name="pref_enable_vibrate_key" translatable="false">pref_enable_vibrate_key</string>
    <string name="pref_enable_vibrate_label">震动</string>
    <string name="pref_enable_vibrate_default" >true</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_result_summary1">通过<xliff:g>%1$s</xliff:g> 总耗时:<xliff:g>%2$s</xliff:g>ms=<xliff:g>%3$s</xliff:g></string>
    <string name="format_result_summary2">耗时<xliff:g>%1$s</xliff:g>~<xliff:g>%2$s</xliff:g>ms 平均:<xliff:g>%3$s</xliff:g>ms</string>
    <string name="orderByTsButton">按耗时排列</string>
    <string name="orderByIdxButton">按出现顺序</string>

</resources>
