<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3"
            >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1"
                >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0/0"
                android:gravity="center"
                android:id="@+id/idxStatus"
                android:textSize="40dp"
                android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="3"
                >

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="3"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="\???"
                        android:gravity="center"
                        android:id="@+id/contentDisplayed"
                        android:textSize="65dp"
                        android:textColor="#3A6EA5"
                        />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="3"
                    >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0ms"
                    android:gravity="center"
                    android:id="@+id/costTimeMilis"
                    android:textSize="20dp"
                    android:textColor="#000000"/>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finishButton"
                android:layout_margin="10dp"
                android:id="@+id/finishBtn"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hintButton"
                android:layout_margin="10dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/knowButton"
            android:background="@drawable/shape"
            android:layout_margin="10dp"
            android:textSize="40dp"
            android:id="@+id/knowBtn"
            />
    </LinearLayout>
</LinearLayout>
